# dale

./: .clang-format  .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  CNAME  Changes  Dockerfile  LICENCE  README.md  _config.yml  asdf  core  generate-docs  include.dt  index.html  index.md  params.json  run-tests  test.dt  vector-big  verify-targets
.github/workflows/: build.yml
doc/: 1-1-introduction.md  1-10-modules.md  1-11-form-reference.md  1-12-repl.md  1-12-tools.md  1-13-tools.md  1-2-setup.md  1-3-types.md  1-4-variables.md  1-5-functions.md  1-6-control-flow.md  1-7-macros.md  1-8-copy-destroy.md  1-8-init-destroy.md  1-8-object-lifetime.md  1-9-namespaces.md  2-1-introspection.md  2-10-concepts.md  2-10-utility.md  2-11-derivations.md  2-11-utility.md  2-12-algorithms.md  2-12-derivations.md  2-13-algorithms.md  2-13-list.md  2-14-list.md  2-14-vector.md  2-15-set.md  2-15-vector.md  2-16-map.md  2-16-set.md  2-17-array.md  2-17-map.md  2-18-array.md  2-18-shared-ptr.md  2-19-shared-ptr.md  2-19-unique-ptr.md  2-2-ctype.md  2-20-operator-macros.md  2-20-unique-ptr.md  (+34 more)
eg/dale-autowrap/: c2dale.sh  dale-autowrap  dale-autowrap.pl
eg/def-type/: def-type.dt
eg/doc/: anonymous-functions.dt  containers.dt  derivations.dt  error-reporting.dt  hello-name.dt  hello-world.dt  introspection.dt  macros.dt  overloading.dt  type-deduction.dt  typed-macros.dt  variants.dt
eg/github-107/: github-107.dt
eg/github-118/: github-118.dt
eg/glut-example/: glut-example.dt
eg/maybe/: maybe.dt
eg/module-to-markdown/: module-to-markdown.dt
modules/: .vector.dt.swp  algorithms.dt  arithmetic.dt  array.dt  assert.dt  bitset-enum.dt  cctype.dt  cerrno.dt  cfloat.dt  clocale.dt  cmath.dt  concept-defs.dt  concepts-core.dt  concepts.dt  csetjmp.dt  csignal.dt  cstdio-core.dt  cstdio.dt  cstdlib.dt  cstring.dt  ctime.dt  ctype.dt  derivations.dt  drt.dt  enum.dt  impc.dt  introspection.dt  list.dt  macros-core.dt  macros.dt  map.dt  math.dt  operator-macros.dt  pthread.dt  set.dt  shared-ptr.dt  stdlib.dt  unique-ptr.dt  unistd.dt  utility.dt  (+2 more)
modules/darwin/: cerrno-arch.dt  cerrno.dt  cstdio.dt
modules/freebsd/: cstdio-arch.dt
modules/linux/: cerrno-arch.dt  cstdio-arch.dt  cstdio.dt
src/: Doxyfile
src/dale/: BindingsConverter.cpp  BindingsConverter.h  Config.h.in  PPContext.h  dale-bindgen.cpp  dalec.cpp  daleci.cpp  incl.pl  llvm_AnalysisVerifier.h  llvm_AssemblyPrintModulePass.h  llvm_CallingConv.h  llvm_Function.h  llvm_IRBuilder.h  llvm_LLVMContext.h  llvm_LinkAll.h  llvm_Linker.h  llvm_Module.h  llvm_PassManager.h  llvm_ValueSymbolTable.h
t/001basic/: 001empty-main.t  002hello-world.t  003main-with-args.t  004hello-name.t  005include.t  006stack-vars.t  007setf-stack-vars.t  008pointers.t  009labels-2.t  010labels.t  011struct.t  012globals.t  013bools.t  014arrays.t  015malloc.t  016free.t  017sr-struct.t  018do.t  019nested-ifs.t  020varargs.t  021implicit-return.t  022once.t  023char.t  024ptr-math.t  026tl-do.t  027ptr-operations.t  028fn-pointers.t  029two-branches.t  030fn-arg-collision.t  031varargs-more.t  032bitwise.t  033intdefs.t  034float-double.t  035float-double-cast.t  036int-proper.t  037opaque-struct.t  038opaque-struct-redef.t  039opaque-struct-redef-2.t  040mr-struct.t  041mr-fn.t  (+96 more)
t/002macro/: 001basic.t  002reverse.t  003varargs.t  004qq-simple.t  005qq-2.t  006qq-3.t  007qq-4.t  008tl-macro.t  009qq-struct.t  010arg-collision.t  011qq-over-struct.t  012null-macro.t  013mqos-errors.t  014malloc-simple.t  015incf-and-decf.t  016typed-macro.t  017nested-bqq.t  018nested-qq.t  019extra-parens.t  020quote.t  021cond.t  022definition-order.t  023qq-successive-uql.t  024qq-null-nodes.t  025qq-list-null-nodes.t  026null-varargs-list.t  027map-nodes.t
t/003control/: 001while.t  002implicit-branch.t  003for.t  004let.t  005while-break.t  006while-continue.t  007for-multiple.t  008and-or.t
t/004namespace/: 001functions.t  002macros.t  003using.t  004nested.t  005new-scope.t  006problem.t  007qualified.defs.t  008root-ns.t  009anonfn-scope.t
t/005overload/: 001basic.t  002ns.t  003ns-struct.t  004fp.t  005fp-address.t  006override-core.t  007cross-ns.t
t/006enum/: 001basic.t  002cmp.t  003cast.t  004init.t  005cast-from.t  006cast-to.t  007problem.t  008hex-problem.t  009bitwise.t  010unqualified.t  011global.t
t/007assert/: 001ok.t  002not-ok.t  003disabled.t
t/008compiler/: 001exists-type.t  002exists-fn.t  003exists-macro.t  004report-error.t  005codomain-basic.t  006arity.t  007struct-mem-count.t  008input-type.t  009struct-member-type.t  010struct-member-names.t  011codomain-ns.t  012exists-variable.t  013proper-typeof.t  014has-errors.t  015eval-expression.t  015must-init.t  016is-lvalue.t  017eval-macro-call.t
t/009module/: 001dtm-fn-user.t  002dtm-fn-user-macro.t  003dtm-var-user.t  004dtm-var-user-macro.t  005dtm-struct-user.t  006dtm-struct-user-macro.t  007dtm-macro-user.t  008dtm-enum-user.t  009dtm-enum-user-macro.t  010dtm-ns-user.t  011dtm-inc-user.t  012dtm-inc-pre-user.t  013dtm-mulinc.t  014dtm-rec.t  015dtm-infile.t  016dtm-opstruct.t  017dtm-importforms.t  018dtm-noimport.t  019dtm-noimport-int.t  020dtm-intover.t  021dtm-importns.t  022dtm-typemap.t  023dash-M.t  024dtm-retval.t  025dtm-preserve-imported.t
t/010destructor/: 001dtor-ns-close.t  002dtor-whole-fn.t  003dtor-goto-back.t  004dtor-goto-fwd.t  005dtor-array.t  006dtor-md-array.t  007dtor-struct.t  008array-init.t  009struct-member-init.t  010struct-recursive-init.t
t/011concept/: 001concept-1level.t  002concept-2level.t  003concept-nlevel.t  004exists-concept.t  005concept-force.t  006concept-tree.t  007concept-impl-all-refs.t
t/012container/: 001pair.t  002triple.t  003vector.t  004vector-sm.t  005vector-ins-erase.t  006vector-clear.t  007list.t  008set-basic.t  009set-erase-value.t  010set-bounds.t  011map-basic.t  012array-basic.t  013vector-in-ns.t  014set-balanced.t  015set-balanced-2.t  016set-balanced-erasemany.t
t/012sp/: 001sp-make.t  002sp-copy.t  003sp-copy-fn.t  004sp-copy-fn-ret.t  005sp-copy-self.t  008sp-nested.t  (+6 more)
vim/: dale.vim
(+1145 files in other folders)
